# spicy-protobuf

./: CMakeLists.txt  COPYING  README  README.md
.github/workflows/: unit-tests.yml
analyzer/: CMakeLists.txt  protobuf.evt  protobuf.spicy  zeek_protobuf.spicy
cmake/: FindSpicyPlugin.cmake
generate-test-data/: README.md  protobuf_1500.txt  protobuf_1500000.txt  protobuf_multiple_positive_ints.txt  protobuf_neg_150.txt  protobuf_neg_2.txtpb  protobuf_zigzag_150.txtpb  protobuf_zigzag_neg_150.txtpb
generate-test-data/i32/: protobuf_i32.txtpb
scripts/: main.zeek
test-data/: protobuf_multiple_positive_ints.raw  protobuf_neg_150.binpb  protobuf_zigzag_150.binpb  protobuf_zigzag_neg_150.binpb
test-data/varint/: protobuf_1500000.binpb  protobuf_large_field_num.binpb  protobuf_neg_2.binpb
testing/: CMakeLists.txt
testing/Baseline/tests.trace/: output
testing/btest/: CMakeLists.txt  btest.cfg
testing/btest/Scripts/: get-zeek-env
testing/btest/tests/: availability.zeek  trace.zeek
testing/gtest/: CMakeLists.txt  SpicyProtobufTest.cpp  protobuf.cpp
testing/gtest/test-data/: README.md
testing/gtest/test-data/i32/: protobuf_i32.binpb
testing/gtest/test-data/i64/: protobuf_i64.binpb  protobuf_i64.txtpb
testing/gtest/test-data/misc/: protobuf_udp_addressbook.binpb
testing/gtest/test-data/varint/: protobuf_bools.txtpb  protobuf_large_field_num.txtpb  protobuf_max_uint.txtpb  protobuf_multiple_positive_ints.txtpb  protobuf_neg_1.txtpb
testing/test-data/varint/: protobuf_1500.binpb  protobuf_neg_1.binpb
tools/: build.sh
